# career-intelligence-platform

./: .gitignore  README.md
apps/ai-service/: pyproject.toml
apps/ai-service/app/: main.py
apps/ai-service/app/api/v1/: health.py  resume.py  test.py
apps/ai-service/app/core/: config.py
apps/ai-service/app/models/: certification.py  education.py  experience.py  job.py  match.py  personal_info.py  project.py  resume.py  section.py  skill.py  summary.py
apps/ai-service/app/parsers/: base_parser.py  experience_parser.py  section_parser.py
apps/ai-service/app/prompts/: experience_prompt.py  section_prompt.py
apps/ai-service/app/services/: llm_service.py  pdf_service.py  resume_parser_service.py  section_service.py  text_cleaner_service.py
apps/api/src/main/resources/: application-prod.yaml
apps/web/: package-lock.json  package.json  tailwind.config.js
apps/web/src/: App.jsx  index.css
apps/web/src/components/: AnalysisTabs.jsx  BreakdownPanel.jsx  IssueReveal.jsx  IssuesPanel.jsx  LoadingScreen.jsx  PersonalitySelector.jsx  RecruiterChat.jsx  RecruiterTabs.jsx  ResultDashboard.jsx  ResultExperience.jsx  ScorePanel.jsx  ScoreReveal.jsx  ShareCard.jsx  TypewriterText.jsx  UploadForm.jsx
apps/web/src/context/: PersonalityContext.jsx
apps/web/src/hooks/: useRevealSequence.js
