[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.8",
    "litellm>=1.91.0",
    "orjson>=3.11.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.50.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]
